rPing: fix session management and implement inactivity detection and redirect for unauthorized access
- Fixed issues related to authLogin
- Fixed 401 error popup while working with the dashboard
- Forcefully redirect to login page when session timeout
- Fixed dashboard logout button color hex

Change-Id: 0eb4827264de9d56b00bf62514b0de37f18800fe, 30b404f6d92885b4c8a5cf9a75af542a91da562d

Signed-off-by: KARTHIK LAL "<dev@karthiklal.in>"

--- a/static/styles.css
+++ b/static/styles.css
@@ -186,17 +186,28 @@ body.dark-mode {
 
 /* Logout Button Style */
 .logout-button {
-    background-color: var(--logout-color); /* Use the defined variable */
+    background-color: var(--logout-color);
     color: white;
-    border-color: var(--logout-color);  /* Consistent border */
-    margin-left: auto; /* Push to the right */
+    border-color: var(--logout-color);
+    margin-left: auto; 
 }
 
 .logout-button:hover {
-    background-color: var(--logout-hover-color); /* Use the defined variable */
+    background-color: var(--logout-hover-color);
     border-color: var(--logout-hover-color);
+    color: white;
 }
 
+.dark-mode .logout-button {
+    background-color: var(--logout-color);
+    border-color: var(--logout-color);
+    color: white;
+}
+.dark-mode .logout-button:hover {
+    background-color: var(--logout-hover-color);
+    border-color: var(--logout-hover-color);
+    color: white;
+}
 
 /* --- Filter Input --- */
 .filter-input {
